# metal-api-tutorial

./: .gitignore  README.md  build-all.sh
step0_simple_window/: Makefile  main.mm
step1_basic_setup/: Makefile  main.mm
step2_triangle/: main.mm
step3_mtlbuffer_rectangle/: Makefile  basic.metal  main.mm
step4_uniform_update/: main.mm
step5_going3d/: basic.metal  main.mm
step6_texture/: CMakeLists.txt  basic.metal  main.mm
step7_synchronization/: CMakeLists.txt  basic.metal  basic_fs.metal  basic_vs.metal  main.mm
step8_gpgpu/: CMakeLists.txt  basic.metal  main.mm
step9_multipass/: Makefile  basic_fs.metal  basic_fs2.metal  basic_vs.metal  basic_vs2.metal  main.mm
